# lit-rev

./: .env  Cargo.toml  ma.bib  research.db
migrations/: 20220709200628_bibliography.sql
src/: main.rs
src/model/: bibliography.rs  mod.rs
