[package]
name = "lit-rev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24", features = ["derive"] }
regex = "1.6.0"
snailquote = "0.3.1"

json = "0.12.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

lazy_static = "1.4.0"
anyhow = "1.0.58"

sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls" , "sqlite" ] }
async-std = { version = "1", features = [ "attributes" ] }